# rotary

./: README.md  environment.yml  meta.yml  pyproject.toml
rotary/: annotation.py  config.yaml  qc.py  rotary.py
rotary/envs/: assembly_flye.yaml  checkm2.yaml  circlator.yaml  dfast.yaml  download.yaml  eggnog.yaml  gtdbtk.yaml  interproscan.yaml  mapping.yaml  medaka.yaml  polypolish.yaml  prokka.yaml  pypolca.yaml  qc.yaml  spokewrench.yaml
rotary/rules/: annotation.smk  assembly.smk  circularize.smk  polish.smk  qc.smk  rotary.smk
