[project]
name = "Rotary"
version = "0.3.0-beta1"
description = """Rotary is a scalable long-read assembly workflow for generating refined assemblies of circular
prokaryotic genomes. The snakemake-based pipeline implements best practices for microbial genome assembly, using either
hybrid short/long-read data or long read-only data as input, and addresses common issues with circular assemblies."""
authors = [
    {name = "Jackson M. Tsuji"},
    {name = "Lee H. Bergstrand"}
]

license = {file = "LICENSE"}
readme = "README.md"

dependencies = [
    "pandas ~=1.4",
    "snakemake ~=7.32",
    "psutil ~=5.9",
    "biopython ~=1.81"
]

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
rotary = "rotary.rotary:main"

[tool.setuptools]
include-package-data = true
